--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "episode-1",
   "version": "1.0.0",
-  "description": "This is just testing",
-  "main": "app.js",
+  "description": "A small testing",
   "scripts": {
     "test": "jest"
   },
-  "keywords": [],
+  "keywords": [
+    "react"
+  ],
   "author": "Shubham Singh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.13.3",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  }
 }
